Fixed alignment of "Sign in to Slack" button.

--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -41,7 +41,7 @@ header .logout {
 }
 
 header .sign-in-to-slack {
-  margin-top: -$base-measure / 4;
+  margin-top: $base-measure / 4;
 }
 
 .add-to-slack a {
